# sdlc-inject

./: .gitignore  README.md  microservice_codebase_evaluation.md  pyproject.toml  save-run.sh
docs/: EVALUATION_HARNESS.md  RESEARCH.md  SETUP.md
evaluation/cascade-009/: CASCADE-009-evidence-map.yaml  mcp_evidence_server.py  neural-report-enriched.json  neural-report.json
evaluation/cascade-011/: CASCADE-011-evidence-map.yaml  mcp_evidence_server.py  personas.yaml  traffic.db
evaluation/cascade-012/: CASCADE-012-evidence-map.yaml  grading-run-3.md  mcp_evidence_server.py
evaluation/grading-reports/: README.md  cascade-011-train-ticket-run1-grading.md  cascade-011-train-ticket-run1-incident-report.md  cascade-011-train-ticket-run2-incident-report.md  cascade-011-train-ticket-run3-incident-report.md
injection_configs/: COMPLEX-001.yaml  COMPLEX-002.yaml  COMPLEX-003.yaml
opentelemetry-demo/: .mcp.json  CLAUDE.md  INCIDENT_REPORT.md  docker-compose.yml
patterns/cascade/: CASCADE-001.yaml  CASCADE-002.yaml  CASCADE-003.yaml  CASCADE-004.yaml  CASCADE-005.yaml  CASCADE-006.yaml  CASCADE-007.yaml  CASCADE-008.yaml  CASCADE-009.yaml  CASCADE-010.yaml  CASCADE-011.yaml  CASCADE-012.yaml
patterns/clock-skew/: CLOCK-001.yaml  (+4 more)
sdlc_inject/: __init__.py  cascade_matcher.py  catalog.py  cli.py  environment.py  grading.py  injection.py  models.py  multi_pattern.py  sdk_utils.py
tests/: test_discovery.py  test_mcp_integration.py  test_neural_analyzer.py  test_sdk_utils.py
train-ticket/: .mcp.json  CLAUDE.md  docker-compose.yml  formal_investigation_report.md
(+95 files in other folders)
